managed null values-