@@ -31,11 +31,14 @@ import org.primefaces.extensions.showcase.model.Distance;
 @FacesConverter("inputNumberConverter")
 public class InputNumberConverter implements Converter {
 
-	public Object getAsObject(final FacesContext context, final UIComponent component, final String value) {		
-                Double doubleValue = Double.valueOf(value);
-                Distance res = new Distance();
-                res.setMeters(doubleValue);
-                return res;
+	public Object getAsObject(final FacesContext context, final UIComponent component, final String value) {
+            Double doubleValue = new Double(0);
+            if(value!=null && !value.isEmpty()){
+                 doubleValue = Double.valueOf(value);                
+            }            
+            Distance res = new Distance();
+            res.setMeters(doubleValue);
+            return res;            
         }
 
 	public String getAsString(final FacesContext context, final UIComponent component, final Object valueO) {
